# lunch

./: CHANGELOG.md  Containerfile  Dockerfile  LICENSE  README.md  build_web.sh  docker-compose.yml  entrypoint.sh  lunch.py  openapi.spec.yml  pyproject.toml  releaserc.json  renovate.json  requirements.txt
.github/workflows/: build.yml  semantic-release.yml
api/: Dockerfile  api.py  lunch.py  mcp.py  model.py  openapi.spec.yml  requirements.txt
api/restaurants/: 3opice.py  alvin.py  asport.py  bistro22.py  charlies_park.py  charlies_square.py  cookpoint.py  facebook_utils.py  jeanpauls.py  jidelna_sto_chuti.py  k2.py  kanas_jidelna.py  kanas_restaurant.py  kancl.py  kotelna.py  liquidbread.py  moravia.py  nepal.py  padowetz.py  padthai.py  portoriko.py  poupe.py  primesteak.py  purkynka.py  qwerty.py  royalnepal.py  rubin.py  sesamo.py  sindelar.py  sportpub.py  spravnemisto.py  statl.py  tasteofindia.py  tusto.py  u_3_certu_starobrnenska.py  uhrebicku.py  utils.py  velorex.py  vitalite.py
lunch/: api.py  config.yml  lunch.py  model.py  openapi.spec.yml
lunch-api/: api.py  index.html  openapi.spec.yml
lunch-api/restaurants/: purkynka.py  utils.py
lunch-web/: package-lock.json
lunch/restaurants/: 3opice.py  asport.py  liquidbread.py  nepal.py  portoriko.py  tasteofindia.py  velorex.py
proxy/: Dockerfile  nginx.conf
web/: Dockerfile  nginx.conf  package-lock.json  package.json
web/public/: index.html  manifest.json
web/src/: Constants.js  LoadingCircle.js  Lunch.js  Restaurant.js  RestaurantList.js  index.js
