[project]
name = "lunch"
version = "1.7.5"
readme = "README.md"
requires-python = "~3.12"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_author = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
